add: endpoint for remove group
