# docs/swagger.yaml
@@ -594,6 +594,41 @@ paths:
       summary: Create
       tags:
       - groups
+  /groups/{group_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Удалить группу
+      parameters:
+      - description: Group ID
+        in: path
+        name: group_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.APIError'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete
+      tags:
+      - groups
   /groups/{group_id}/join:
     post:
       consumes:
